--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --check --plugin-search-dir=. .",
-    "format": "prettier --write --plugin-search-dir=. ."
+    "format": "prettier --write --plugin-search-dir=. .",
+    "enable-pnpm": "corepack enable pnpm"
   },
   "devDependencies": {
     "@sveltejs/adapter-static": "^1.0.0-next.24",
